Menambahkan Fungsi Login, Register, dan Upload Story

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
     <string name="maps">MAPS</string>
     <string name="title_activity_maps">Story on Maps</string>
     <string name="tampilkan_lokasi">Tampilkan Lokasi</string>
+    <string name="masukan_email">Masukkan Email Anda!</string>
+    <string name="masukan_password">Masukkan Email Anda!</string>
+    <string name="masukan_deskripsi">Masukkan Deskripsi Cerita Anda!</string>
+    <string name="masukan_foto">Masukkan Foto Anda!</string>
 </resources>
